# gto

./: .gitignore  README.md  app.py  defaults.json  gto_helper.py  gto_history.csv  pyproject.toml  strategy_packs.json
.streamlit/: config.toml
