[project]
name = "gto"
version = "0.1.0"
description = "QuickGTO: poker decision tool with Monte Carlo equity simulations"
requires-python = ">=3.9"

dependencies = [
    "cython",
    "streamlit",
    "numpy",
    "plotly",
    "eval7 @ git+https://github.com/julianandrews/pyeval7.git"
]

[tool.uv.extra-build-dependencies]
    eval7 = ["Cython"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]